Adjusts ATPS in info.plist, changes urlstring in HoroscopeAPIClient, adjusts constraints on main.storyboard for userDefaultsVC, deletes unnecessary ibaction for datepicker

--- a/UserDefaultsLab/UserDefaultsLab/Base.lproj/Main.storyboard
+++ b/UserDefaultsLab/UserDefaultsLab/Base.lproj/Main.storyboard
@@ -53,9 +53,6 @@
                             </label>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="a4U-8M-ehH">
                                 <rect key="frame" x="0.0" y="548" width="414" height="216"/>
-                                <connections>
-                                    <action selector="datePickerWasScrolled:" destination="BYZ-38-t0r" eventType="valueChanged" id="1DE-Jl-lFx"/>
-                                </connections>
                             </datePicker>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -107,30 +104,30 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Here is today's horoscope for:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m6c-A4-qPe">
-                                <rect key="frame" x="39" y="204" width="337" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;User's Sign&gt;" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0m2-ia-cnG">
-                                <rect key="frame" x="128" y="232.5" width="159" height="20.5"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Xf-zy-N1j">
-                                <rect key="frame" x="184" y="374" width="46" height="217"/>
+                                <rect key="frame" x="184" y="373.5" width="46" height="217.5"/>
                                 <state key="normal" title="Reveal"/>
                                 <connections>
                                     <action selector="revealButtonPressed:" destination="wdT-yG-uAQ" eventType="touchUpInside" id="tlz-4L-OEp"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Here is today's horoscope for:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m6c-A4-qPe">
+                                <rect key="frame" x="39" y="298" width="337" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;User's Sign&gt;" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0m2-ia-cnG">
+                                <rect key="frame" x="128" y="327" width="159" height="20.5"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="fkW-76-nmW" firstAttribute="trailing" secondItem="8Xf-zy-N1j" secondAttribute="trailing" constant="184" id="0q9-Ox-mQd"/>
-                            <constraint firstItem="m6c-A4-qPe" firstAttribute="top" secondItem="e6r-LX-F6a" secondAttribute="bottom" constant="8" id="7z0-eV-FMi"/>
+                            <constraint firstItem="m6c-A4-qPe" firstAttribute="top" secondItem="e6r-LX-F6a" secondAttribute="bottom" constant="102" id="7z0-eV-FMi"/>
                             <constraint firstItem="fkW-76-nmW" firstAttribute="trailing" secondItem="m6c-A4-qPe" secondAttribute="trailing" constant="38" id="83C-22-K6v"/>
                             <constraint firstItem="m6c-A4-qPe" firstAttribute="leading" secondItem="fkW-76-nmW" secondAttribute="leading" constant="39" id="8dZ-5C-7VS"/>
                             <constraint firstItem="8Xf-zy-N1j" firstAttribute="leading" secondItem="fkW-76-nmW" secondAttribute="leading" constant="184" id="9Zn-N2-FG8"/>
@@ -139,7 +136,7 @@
                             <constraint firstItem="fkW-76-nmW" firstAttribute="trailing" secondItem="e6r-LX-F6a" secondAttribute="trailing" constant="20" id="BOs-9G-jyj"/>
                             <constraint firstItem="e6r-LX-F6a" firstAttribute="leading" secondItem="fkW-76-nmW" secondAttribute="leading" constant="20" id="Eo4-CP-YlX"/>
                             <constraint firstItem="0m2-ia-cnG" firstAttribute="leading" secondItem="fkW-76-nmW" secondAttribute="leading" constant="128" id="JoW-4e-646"/>
-                            <constraint firstItem="8Xf-zy-N1j" firstAttribute="top" secondItem="0m2-ia-cnG" secondAttribute="bottom" constant="121" id="Pc6-1r-FwG"/>
+                            <constraint firstItem="8Xf-zy-N1j" firstAttribute="top" secondItem="0m2-ia-cnG" secondAttribute="bottom" constant="26.5" id="Pc6-1r-FwG"/>
                             <constraint firstItem="e6r-LX-F6a" firstAttribute="top" secondItem="fkW-76-nmW" secondAttribute="top" constant="116" id="g69-Jd-FF7"/>
                             <constraint firstItem="fkW-76-nmW" firstAttribute="trailing" secondItem="0m2-ia-cnG" secondAttribute="trailing" constant="127" id="xct-Qo-Pzk"/>
                         </constraints>
@@ -177,11 +174,11 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Horoscope description:" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="jVe-Hq-4Ig">
-                                <rect key="frame" x="0.0" y="363" width="414" height="499"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Horoscope description:" textAlignment="center" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jVe-Hq-4Ig">
+                                <rect key="frame" x="0.0" y="362.5" width="414" height="499.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mood:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fPN-ms-Y9N">
@@ -190,14 +187,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Keywords:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dek-1D-Pzn">
-                                <rect key="frame" x="88" y="258" width="238" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Keywords:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dek-1D-Pzn">
+                                <rect key="frame" x="88" y="258" width="238" height="20.5"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intensity:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U8v-TJ-Oyp">
-                                <rect key="frame" x="88" y="287" width="238" height="21"/>
+                                <rect key="frame" x="88" y="286.5" width="238" height="21"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
